# endpoint-harvestor

./: CONTRIBUTING.md  OWNERS.yaml  README.md  justfile  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/analyzers/: pyproject.toml
app/analyzers/src/analyzers/: __init__.py  anomaly_detector.py  ioc_scanner.py  mitre_attack.py  protocol.py  registry.py  sigma_scanner.py  timeline.py  types.py  yara_scanner.py
app/analyzers/tests/: test_analyzers.py
app/cli/: pyproject.toml
app/cli/src/cli/: main.py
app/cli/tests/: test_cli.py
app/collectors/: pyproject.toml
app/collectors/src/collectors/: __init__.py  browser.py  certificates.py  clipboard.py  environment.py  filesystem.py  firewall.py  installed_software.py  kernel_modules.py  logs.py  network.py  persistence.py  processes.py  protocol.py  registry.py  shell_history.py  system_info.py  types.py  usb_devices.py  users.py
app/collectors/tests/: test_collectors.py
app/engine/: pyproject.toml
app/engine/src/engine/: __init__.py  orchestrator.py  platform_detect.py  profile_loader.py
app/engine/tests/: test_engine.py
app/errors/: pyproject.toml
app/errors/src/errors/: __init__.py  handler.py
app/evidence/: pyproject.toml
app/evidence/src/evidence/: __init__.py  integrity.py  secure_output.py  types.py
app/evidence/tests/: test_evidence.py
app/logger/: pyproject.toml
app/logger/src/logger/: __init__.py  config.py
app/reporters/: pyproject.toml
app/reporters/src/reporters/: __init__.py  console_report.py  csv_report.py  html_report.py  json_report.py  protocol.py  registry.py  types.py
app/reporters/tests/: test_reporters.py
app/settings/: pyproject.toml
app/settings/src/settings/: __init__.py  config.py
app/utils/: pyproject.toml
app/utils/src/utils/: __init__.py  forensic_utils.py  hashing.py  privileges.py
development/: .pre-commit-config-py.yaml  .pylintrc  .yamllint.yaml  README.md
profiles/: full.yaml  quick.yaml  standard.yaml
rules/iocs/: example_iocs.yaml
rules/sigma/: example_sigma.yml
rules/yara/: example.yar
