[project]
name = "ii-evidence"
version = "0.1.0"
description = "Evidence integrity and secure output for IntrusionInspector"
requires-python = ">=3.12"
dependencies = [
    "ii-settings",
    "ii-logger",
    "ii-errors",
    "pydantic>=2.0",
    "pyzipper>=0.3.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evidence"]
