[project]
name = "ii-reporters"
version = "0.1.0"
description = "Report generators for IntrusionInspector"
requires-python = ">=3.12"
dependencies = [
    "ii-settings",
    "ii-logger",
    "ii-errors",
    "ii-collectors",
    "ii-analyzers",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporters"]
