[project]
name = "ii-settings"
version = "0.1.0"
description = "Shared configuration constants for IntrusionInspector"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/settings"]
